# wamv_speed_control

./: .gitignore  .gitmodules  README.md
openai_examples_projects/wamv_openai_ros_example/launch/: spawn_task_buoys.launch  start_training.launch
vrx_2dnav/: CMakeLists.txt  package.xml
vrx_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml
vrx_2dnav/launch/: move_base.launch
vrx_speed_ctrl/: CMakeLists.txt  package.xml
vrx_speed_ctrl/config/: enable_statistics_pid.yaml  pose_pid.yaml  speed_pid.yaml
vrx_speed_ctrl/launch/: pid_ros.launch  pose_control_world.launch  speed_control.launch  speed_control_world.launch  vrx_loc_world.launch  waypoint_follow_example.launch
vrx_speed_ctrl/nodes/: autotune.cpp  get_geopose_sp.py  pid.py  pose_control_pid_old.py  pose_control_pid_wamv_ned.py  velocity_control_pid_old.py  velocity_control_wamv.py
