<?xml version="1.0"?>
<package format="2">
  <name>vrx_speed_ctrl</name>
  <version>0.0.0</version>
  <description>This package provides a simple speed control (surge, sway, yaw) for wamv T configuration, to interface with the navigation stack fram a cmd_vel topic. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="davihenriqueds@dca.ufrn.br">Davi Henrique</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>pid</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geographic_msgs</depend>

</package>
